-
Bug
-
Resolution: Done
-
P2: Important
-
5.9.2
-
macOS 10.12
-
-
e28ae083d2ba69406bf444f951b6c820c5aaf4f4
Condensed fonts are not being rendered with the right spacing in some cases. In the case of the example, when NoFontMerging is specified for the strategy then the spacing is not correct. If it is not specified then the font appears to be the same but the spacing is correct.
- relates to
-
QTBUG-68041 Inconsistencies when rendering condensed fonts on different platforms
-
- Open
-
| For Gerrit Dashboard: QTBUG-63800 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 227367,8 | macOS: Fix stretch of condensed fonts with NoFontMerging | dev | qt/qtbase | Status: MERGED | -2 | 0 |